{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 23,
  "lineage": "f6289bef-3d2c-991f-9b39-0e17f46fb35e",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-26T03:43:50.314-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/aicolab/global/firewalls/load-balancer-hc",
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/aicolab/global/networks/auto-terraform-network",
            "priority": 1000,
            "project": "aicolab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aicolab/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-26T03:43:50.249-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/aicolab/global/firewalls/load-balancer-vm-service",
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/aicolab/global/networks/auto-terraform-network",
            "priority": 1000,
            "project": "aicolab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aicolab/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2020-08-26T03:42:36.233-07:00",
            "id": "projects/aicolab/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "34.67.209.252",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "aicolab",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aicolab/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/aicolab/regions/us-central1/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/aicolab/global/networks/auto-terraform-network",
            "name": "auto-terraform-network",
            "project": "aicolab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aicolab/global/networks/auto-terraform-network"
          }
        }
      ]
    }
  ]
}